# act-context

./: .gitignore  CITATION.cff  README.md  pyproject.toml  reproduce.sh
experiments/probe_regrade/: README.md  judge_openai.py  regrade_nodes.json  regrade_run.py  select_nodes.py  stats_kappa.py  test_regrade.py
experiments/probe_regrade/results/: ANALYSIS.md  analysis.json  answers.json  grades.json  probes.json  representations.json
experiments/probe_regrade/results_shipped_t02/: ANALYSIS.md  analysis.json  answers.json  grades.json  representations.json
experiments/resolve/: README.md  arms_v2.py  coverage_sweep.py  edit_patch_v2.py  scaled_instances.json  scaled_run.py  select_instances.py  stats.py  test_scaled.py
experiments/resolve/results/: .gitignore  ANALYSIS.md  analysis.json  costs.json  coverage.json  coverage_sweep.json  gold.exp014b_gold.json  metrics.json  oracle_full.exp014b_oracle_full.json  oracle_keep_drop.exp014b_oracle_keep_drop.json  oracle_tier.exp014b_oracle_tier.json  preds_gold.json  preds_oracle_full.json  preds_oracle_keep_drop.json  preds_oracle_tier.json  run_meta.json
experiments/sequence_slice/: README.md  run_014c.py  seq_arm.py  test_014c.py
paper/: checklist.tex  main.tex  refs.bib
results/legacy_probes/: act_view_representations.json  h2_info_preservation.json  h2_residual_vs_cumulative.json  h_find_localization.json
scripts/: make_figures.py
src/dhcm_ng/: __init__.py  assemble.py  context_arms.py  descent.py  embed.py  extract.py  llm.py  model.py  reduce.py  summarize.py
src/dhcm_ng/eval/: __init__.py  act_view.py  (+3 more)
(+9 files in other folders)
